Rewrote views with two generic views

--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -3,4 +3,5 @@
 	{% for choice in poll.choice_set.all %}
 		<li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
 	{% endfor %}
+	<a href="{% url 'polls:detail' poll.id %}">Vote again?</a>
 </ul>
