--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,6 +1,6 @@
-{% if latest_polls %}
+{% if latest_poll_list %}
 	<ul>
-	{%for poll in latest_polls %}
+	{%for poll in latest_poll_list %}
 		<li><a href = "{% url 'polls:detail' poll.id %}">{{poll.question}}</a></li>
 	{% endfor %}
 	</ul>
